[package]
name = "rustchain"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = "0.4.45"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
futures = "0.3.31"
env_logger = "0.11.11"
hex = "0.4.3"
libp2p = { version = "0.56.0", features = ["gossipsub", "mdns", "tokio", "macros", "noise", "yamux", "tcp"] }
log = "0.4.33"
rand = { version = "0.8.0", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["std"] }
sha2 = "0.11.0"
tokio = { version="1.52.3", features=["full"]}
